--- a/data/projects/raspberrypidoorbell.yaml
+++ b/data/projects/raspberrypidoorbell.yaml
@@ -1,3 +1,6 @@
 title: Raspberry Pi Doorbell
+tags:
+- Python
+blogPost: http://blog.lgb.dk/raspberry-pi-smartphone-doorbell
 img: rpidoorbell.png
 description: The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door. The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
