Changed some images, fixed even more styles and hugo implementations, and removed test posts

--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,10 @@
-baseurl = "http://lgb.dk"
+baseurl = "https://lgb.dk"
 languageCode = "en-us"
 title = "Lasse Bjerre Portfolio"
 disqusShortname = "lgbdk"
 
 [params]
+    tagline = "Portfolio"
 
 [author]
     name = "Lasse Bjerre"
