Changed aboutme and removed some social links

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,5 @@ disqusShortname = "lgbdk"
     name = "Lasse Bjerre"
     profilePicture = "/img/profile.jpg"
     mail = "lasse@lgb.dk"
-    twitter = "https://twitter.com/Ordspilleren"
     github = "https://github.com/Ordspilleren"
-    steam = "http://steamcommunity.com/id/lgb/"
-    linkedin = "https://dk.linkedin.com/in/lasse-bjerre-93294896"
+    linkedin = "https://dk.linkedin.com/in/lgb"
