--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,6 @@ disqusShortname = "lgbdk"
 [author]
     name = "Lasse Bjerre"
     profilePicture = "/img/profile.jpg"
-    mail = "lasse@lgb.dk"
+    mail = "hello@lgb.dk"
     github = "https://github.com/Ordspilleren"
     linkedin = "https://dk.linkedin.com/in/lgb"
